--- a/src/Components/Timer.css
+++ b/src/Components/Timer.css
@@ -3,7 +3,7 @@
 
 .timer {
   grid-area: timer;
-  margin: auto;
+  /* margin: auto; */
 }
 
 .timerCircle {
